--- a/a/as/asi/asiahotels.com.html
+++ b/a/as/asi/asiahotels.com.html
@@ -1,17 +1,22 @@
-<!--The following is the downloaded HTML source of the asiahotels.com privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611214955id_/http%3A//www.asiahotels.com/privacypolicy/termsofuse-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the asiahotels.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208000244id_/http%3A//www.asiahotels.com/privacypolicy/termsofuse-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>asia-hotels.com - Terms of Use and Privacy Policy </title>
-	<meta name="description" content=""><meta name="keywords" content=""><meta name="author" content=""><meta name="classification" content=""><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="robots" content="all"><meta name="robots" content="index all, follow all"><meta name="revisit-after" content="7 days"><meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; comment &quot;ICRAonline EN v2.0&quot; l gen true for &quot;http://www.asiahotels.com/&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.asiahotels.com/&quot; r (n 0 s 0 v 0 l 0))"> 
-	<link rel="stylesheet" type="text/css" href="/includes/ah-css2.css">
+	<meta name="description" content="">
+<meta name="keywords" content="">
+<meta name="author" content="">
+<meta name="classification" content="">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="robots" content="all"><meta name="robots" content="index all, follow all"><meta name="revisit-after" content="7 days"><meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; comment &quot;ICRAonline EN v2.0&quot; l gen true for &quot;http://www.asiahotels.com/&quot; r (nz 1 vz 1 lz 1 oz 1 cz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.asiahotels.com/&quot; r (n 0 s 0 v 0 l 0))"> 
+	<link rel="stylesheet" type="text/css" href="/includes/ah-css2.css" media="screen">	
+	
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" background="/images/bdgrd.gif">
-    
+
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
 <tbody><tr><td valign="top" rowspan="3" width="119" height="110">						
-   <a href="/" title="asiahotels.com - home" target=""><img src="/images/header/asiahotelsbellhop_lean.gif" width="119" height="110" border="0" alt="asiahotels.com - home"></a> 			
+   <a href="/" title="asiahotels.com - home" target=""><img src="/images/header/asiahotelsbellhop_lean_xmas.gif" width="119" height="110" border="0" alt="asiahotels.com - home"></a> 			
 </td><td bgcolor="#0000FF" nowrap="" height="21">
 	<table cellpadding="0" cellspacing="0" border="0" height="21">
 	<tbody><tr>
@@ -28,18 +33,22 @@
 <tr><td width="100%" height="75" bgcolor="#FFCC00">
 	<table cellpadding="0" cellspacing="0" border="0" width="633"><tbody><tr><td align="center">
 	
-				<!-- TF 468x60 JScript NoPop code -->
-				<table border="0" cellpadding="0" cellspacing="0">
-				<tbody><tr><td>
-					<script language="javascript">
-					<!--
-					document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=asiahotelscom&adSpace=ROS&size=468x60&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-					//-->
-					</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=asiahotelscom&amp;adSpace=ROS&amp;size=468x60&amp;pop=0&amp;requestID=20371634890.6614993447227209"></script>
-					<noscript><a href="http://a.tribalfusion.com/i.click?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=557590793" target=_blank><img src="http://a.tribalfusion.com/i.ad?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=557590793" width=468 height=60 border=0 alt="Click Here"></a></noscript>										
-				</td></tr>
-				</tbody></table>
-				<!-- TF 468x60 JScript NoPop code -->    
+				<!-- TF 468x60 IFrame NoPop code -->		
+				<iframe src="http://a.tribalfusion.com/f.ad?site=asiahotelscom&amp;adSpace=ROS&amp;size=468x60&amp;pop=0&amp;requestID=300396329" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+						<script language=javascript><!--
+						randNum = ((new Date()).getTime() % 2147483648) + Math.random();
+						document.write(
+							"<a href='http://a.tribalfusion.com/i.click?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=" + randNum + "' target=_blank>" +
+							"<img src='http://a.tribalfusion.com/i.ad?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=" + randNum + "'" +
+							" width=468 height=60 border=0 alt='Click Here'></a>");
+						// -->
+						</script>
+						<noscript>
+							<a href="http://a.tribalfusion.com/i.click?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=300396329" target=_blank>
+							<img src="http://a.tribalfusion.com/i.ad?site=asiahotelscom&adSpace=ROS&size=468x60&requestID=300396329" width=468 height=60 border=0 alt="Click Here"></a>
+						</noscript>
+				</iframe>
+				<!-- TF 468x60 IFrame NoPop code -->
 				 
 	</td></tr></tbody></table>
 </td></tr><tr><td bgcolor="#FFFFFF" height="16"><img src="/images/blank.gif" height="16" width="1" border="0" alt=""></td></tr>
@@ -189,15 +198,9 @@ sites and are not responsible for their content or accuracy. Linking to any hype
 
 <br>
 <center>
-<hr width="90%"><br>
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-	<tbody><tr valign="top">
-		<td align="center" valign="top" class="content2">
-			[ <a href="/">asiahotels.com Home</a> | <a href="/contactasiahotels.asp">Contact us</a> | <a href="/helplg.asp">Help</a> | <a href="/sitemap.asp">Sitemap</a> | <a href="/e-postcard/main.asp">e-Postcards</a> | <a href="/subscribe.asp">Newsletter</a> | <a href="/recommendhotel.asp?title=asia%2Dhotels%2Ecom+%2D+Terms+of+Use+and+Privacy+Policy+">Tell a friend</a> | <a href="/search.asp">Advanced search</a> ]
-		</td>
-	</tr>
-</tbody></table><br>
+<hr width="90%">
 
+<p class="content2">[ <a href="/">asiahotels.com Home</a> | <a href="/contactasiahotels.asp">Contact us</a> | <a href="/helplg.asp">Help</a> | <a href="/sitemap.asp">Sitemap</a> | <a href="/e-postcard/main.asp">e-Postcards</a> | <a href="/subscribe.asp">Newsletter</a> | <a href="/recommendhotel.asp?title=asia%2Dhotels%2Ecom+%2D+Terms+of+Use+and+Privacy+Policy+">Tell a friend</a> | <a href="/search.asp">Advanced search</a> ]</p>
 
 
 <table cellpadding="0" cellspacing="0" border="0">
@@ -205,40 +208,26 @@ sites and are not responsible for their content or accuracy. Linking to any hype
 	<td align="center" valign="top" class="leftcity"></td>
 </tr>
 </tbody></table>
-<table cellpadding="2" cellspacing="0" border="0" width="94%">
-<tbody><tr>
-	<td bgcolor="#0000ff">
-		<table cellpadding="4" cellspacing="0" border="0" width="100%">
-			<tbody><tr>
-				<td bgcolor="#ffffff">
-<p style="font-family: arial, helvetica, sans-serif; font-size: 11px;">
+
+<table cellpadding="4" cellspacing="2" border="0" width="94%" bgcolor="#0000FF">
+<tbody><tr><td bgcolor="#ffffff">
+<p class="sml">
  
-		
+	
 <b>Hotels in Asia:</b><br><a href="http://www.asiahotels.com/hl/Australia.asp">Australia hotels</a>, <a href="http://www.asiahotels.com/hl/brunei.asp">Brunei hotels</a>, <a href="http://www.asiahotels.com/hl/Cambodia.asp">Cambodia hotels</a>, <a href="http://www.asiahotels.com/hl/China.asp">China hotels</a>, <a href="http://www.asiahotels.com/hl/Fiji.asp">Fiji hotels</a>, <a href="http://www.asiahotels.com/hl/French_Polynesia.asp">French Polynesia hotels</a>, <a href="http://www.asiahotels.com/hl/Hong_Kong.asp">Hong Kong hotels</a>, <a href="http://www.asiahotels.com/hl/India.asp">India hotels</a>, <a href="/hl/Indonesia.asp">Indonesia hotels</a>, <a href="http://www.asiahotels.com/hl/Japan.asp">Japan hotels</a>, <a href="http://www.asiahotels.com/hl/Laos.asp">Laos hotels</a>, <a href="http://www.asiahotels.com/hl/Macau.asp">Macau hotels</a>, <a href="http://www.asiahotels.com/hl/Malaysia.asp">Malaysia hotels</a>, <a href="http://www.asiahotels.com/hl/Maldives.asp">Maldives hotels</a>, <a href="http://www.asiahotels.com/hl/Myanmar.asp">Myanmar hotels</a>, <a href="http://www.asiahotels.com/hl/Nepal.asp">Nepal hotels</a>, <a href="http://www.asiahotels.com/hl/new_caledonia.asp">New Caledonia hotels</a>, <a href="http://www.asiahotels.com/hl/New_Zealand.asp">New Zealand hotels</a>, <a href="http://www.asiahotels.com/hl/pakistan.asp">Pakistan hotels</a>, <a href="http://www.asiahotels.com/hl/Philippines.asp">Philippines hotels</a>, <a href="http://www.asiahotels.com/hl/Singapore.asp">Singapore hotels</a>, <a href="http://www.asiahotels.com/hl/South_Korea.asp">South Korea hotels</a>, <a href="http://www.asiahotels.com/hl/Sri_Lanka.asp">Sri Lanka hotels</a>, <a href="http://www.asiahotels.com/hl/Taiwan.asp">Taiwan hotels</a>, <a href="http://www.asiahotels.com/hl/Thailand.asp">Thailand hotels</a>, <a href="http://www.asiahotels.com/hl/vanuatu.asp">Vanuatu hotels</a>, <a href="http://www.asiahotels.com/hl/Vietnam.asp">Vietnam hotels</a>
-		
-		
+	
+	
 </p>
-		</td>
-	</tr>
-	</tbody></table>
-</td>
-</tr>
+</td></tr>
 </tbody></table>
+<br>
 
-<p align="center" style="font-family: arial, helvetica, sans-serif; font-size: 11px;">
-	<a href="/">Asia hotels</a> | 
-	<a href="http://www.asiahotels.com/africa-default.asp">Africa hotels</a> | 
-	<a href="http://www.asiahotels.com/canada-hotels.asp">Canada hotels</a> | 
-	<a href="http://www.asiahotels.com/caribbean-default.asp">Caribbean hotels</a> | 
-	<a href="http://www.euro-hotels.com/euro-default.asp">Europe hotels</a> | 
-	<a href="http://www.asiahotels.com/middleeast-default.asp">Middle East hotels</a> <br>
-	<a href="http://www.asiahotels.com/americas-default.asp">South America hotels</a> | 
-	<a href="http://www.asiahotels.com/usa-hotels.asp">United States hotels</a>
-</p>
 
-<p align="center" style="font-family: arial, helvetica, sans-serif; font-size: 11px;">
-12&nbsp;June&nbsp;2004<br>Copyright 1997 - 2004 Paragon Travel Limited, All rights reserved<br>View our <a href="/privacypolicy/termsofuse-policy.asp">Terms of Use and Privacy Policy</a><br>
--52-
+<p class="sml"><a href="/">Asia hotels</a> | <a href="http://www.asiahotels.com/africa-default.asp">Africa hotels</a> | <a href="http://www.asiahotels.com/canada-hotels.asp">Canada hotels</a> | <a href="http://www.asiahotels.com/caribbean-default.asp">Caribbean hotels</a> | <a href="http://www.euro-hotels.com/euro-default.asp">Europe hotels</a> | <a href="http://www.asiahotels.com/middleeast-default.asp">Middle East hotels</a><br>
+<a href="http://www.asiahotels.com/americas-default.asp">South America hotels</a> | <a href="http://www.asiahotels.com/usa-hotels.asp">United States hotels</a></p>
+	
+<p class="sml">8&nbsp;December&nbsp;2004<br>Copyright 1997 - 2004 Paragon Travel Limited, All rights reserved<br>View our <a href="/privacypolicy/termsofuse-policy.asp">Terms of Use and Privacy Policy</a><br>
+-62-
 </p>
 </center>
 
