--- a/d/di/dis/disneynow.com.html
+++ b/d/di/dis/disneynow.com.html
@@ -1,31 +1,16 @@
-<!--The following is the downloaded HTML source of the disneynow.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604025131id_/http%3A//wdwnow.com/Privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the disneynow.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208004356id_/http%3A//wdwnow.com/Privacy.htm) for the most accurate reproduction.-->
 
-<html><!-- #BeginTemplate "/Templates/Main.dwt" --><!-- DW6 --><head>
-<!-- wdw, disney, walt disney world, epcot, magic kingdom, mgm, studios,
-animal kingdom, parks, attractions, shows, fireworks, restaurants, reviews,
-forum, video, audio, sounds, photos -->
-<!-- #BeginEditable "doctitle" --> 
-<title>WDWNOW.COM WDW, Walt Disney World News Updates Photos Reviews Discussion Forum</title>
-<!-- #EndEditable -->
-<meta name="distribution" content="Global">
-<meta name="description" content="Walt Disney World news sounds video
-discussion forums reviews parks attractions ride">
-<meta name="keywords" content="wdw, disney, walt disney world, epcot, magic
-kingdom, mgm, studios, animal kingdom, parks, attractions, shows, fireworks,
-restaurants, reviews, forum, video, audio, sounds, photos">
-<meta name="object" content="Document">
-<meta name="robots" content=" ALL">
-<meta name="language" content="english">
-<meta name="rating" content="general">
-<meta name="revisit-after" content="7 days">
-<meta name="rating" content="general">
-<meta http-equiv="Content-Language" content="en-gb">
+<html><head>
+<title>Disney Reservations</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<!-- wdw, disney, walt disney world, epcot, magic kingdom, mgm, studios,
-animal kingdom, parks, attractions, shows, fireworks, restaurants, reviews,
-forum, video, audio, sounds, photos -->
-<link rel="STYLESHEET" type="text/css" href="style.css">
+<meta name="Description" content="WDW offers Walt Disney World reservations,
+news, updates, Disney cruises and Orlando area resort information">
+<meta name="Keywords" content="disney reservations, disney travel,wdw
+resorts,walt disney world, epcot, magic kingdom, mgm, studios, animal
+kingdom, parks, attractions, shows, fireworks, restaurants, reviews>
+
+<LINK REL=STYLESHEET TYPE=" text="" css"="" href="../style.css">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <script language="JavaScript" src="security.js"></script>
 <script language="JavaScript">
@@ -145,12 +130,7 @@ document.write(" ");
   - <a href="Activities_Childcare.asp" target="_self">Childcare</a><br>
   - <a href="Park_Tickets.htm" target="_self">Tickets</a></p>
 <!-- #EndLibraryItem -->
-                  <p align="left"><img src="images/rightline.gif" width="130" height="1"> 
-                    <font color="#990000"><strong>Discount Rates!</strong></font></p>
-                  <p align="left"><strong><font color="#0000FF">Florida Resident 
-                    </font></strong><font color="#000000">rates available January 
-                    1, 2004 to April 17, 2004</font></p>
-                  <p align="left"> <img src="images/rightline.gif" width="130" height="1"></p>
+<p align="left"> <img src="images/rightline.gif" width="130" height="1"></p>
                   <p class="SideNavLinks">Don't Miss These Events</p>
                   <p><font color="#0000FF" size="2" face="Arial, Helvetica, sans-serif"><strong>Disney 
                     Firework Boat Cruises</strong></font></p>
@@ -289,9 +269,9 @@ document.write(" ");
                 <td colspan="2"><img src="images/leftside.gif" width="138" height="22"> 
                   <table width="124" border="0" cellspacing="2" cellpadding="2">
                     <tbody><tr> 
-                      <td valign="top" bgcolor="#FFFFFF" class="smaller"><p align="center" class="Boldfont">&nbsp;<a href="http://www.floridatourismboard.com" target="_blank"><img src="images/NameTag2.gif" width="125" height="35" border="0"></a><br>
+                      <td valign="top" bgcolor="#FFFFFF" class="smaller"><p align="center" class="Boldfont"><a href="http://www.floridatourismboard.com/sites/wdwnow.html" target="_blank"><img src="images/small.gif" width="130" height="140" border="0"></a><br>
                           <font color="#0000FF">Vacationeers is a Proud Member 
-                          of the Florida Tourism Board, <a href="http://www.floridatourismboard.com" target="_blank"><u>Click 
+                          of the Florida Tourism Board, <a href="http://www.floridatourismboard.com/sites/wdwnow.html" target="_blank"><u>Click 
                           Here to learn more</u></a>.</font></p>
                         <p class="Boldfont"><font color="#0000FF">Walt Disney World's® 
                           DREAM MAKER™ Packages </font></p>
