--- a/c/co/coa/coastalwatch.com.html
+++ b/c/co/coa/coastalwatch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coastalwatch.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605174133id_/http%3A//www.coastalwatch.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coastalwatch.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208005732id_/http%3A//www.coastalwatch.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head><title>Coastalwatch Conditions of Use, Disclaimer and Copyright Information.</title>
 <script language="JavaScript">
@@ -57,13 +57,7 @@ function openpop(cc) {
 	<td width="130" valign="top"> 
 	<p><img src="gfx/head/3dlogo2b.gif" width="139" height="66" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="25,19,109,66" href="stuff.asp" alt="Coastalwatch Surf Stuff Auctions and Classifieds" title="Coastalwatch Surf Stuff Auctions and Classifieds"></map></p>
 	</td>
-	<td width="468" align="right">
-<script language="JavaScript" src="http://ad.au.doubleclick.net/adj/cw.com.au/;sz=468x60;ord=926891505?"></script>
-
-<noscript>
-<A HREF="http://ad.au.doubleclick.net/jump/cw.com.au/;sz=468x60;ord=926891505?" TARGET="_blank">
-<IMG SRC="http://ad.au.doubleclick.net/ad/cw.com.au/;sz=468x60;ord=926891505?" WIDTH="468" HEIGHT="60" BORDER="0" ALT="Click here...">Click here...</A>
-</noscript></td>
+	<td width="468" align="right"><a href="http://www.coastalwatch.com/ads/adredir.asp?id=10004"><img src="http://www.coastalwatch.com/ads/banner-citybeach.gif" border="1" height="60" width="468"></a></td>
 	<td width="160" align="right"><a href="reports.asp"><img src="ads/box-cw2.gif" width="150" height="60" border="1"></a></td>
 	</tr>
 	</tbody></table>
@@ -74,7 +68,7 @@ function openpop(cc) {
 <img src="gfx/titles/livevideo.gif" width="120" height="22" alt="live video"><br>
 <table border="0" cellspacing="0" cellpadding="5" width="100%" background="gfx/tile-light.gif" bgcolor="#FFFFFF">
 <tbody><tr valign="top"> 
-<td class="lists"><a href="cam.asp"><img src="gfx/photos/coast.gif" width="110" height="39" border="0" vspace="3"></a><br> <b>Most Popular</b><br><a href="cam.asp?cam=500">Noosa</a><br><a href="cam.asp?cam=600">Sunshine Beach</a><br><a href="cam.asp?cam=750">Alex Headland</a><br><a href="cam.asp?cam=755">Alex Broadband</a><br><a href="cam.asp?cam=900">Kings</a><br><a href="cam.asp?cam=1100">Seaway Spit</a><br><a href="cam.asp?cam=1200">Artificial Reef</a><br><a href="cam.asp?cam=1300">Surfers Paradise</a><br><a href="cam.asp?cam=1350">Northcliffe</a><br><a href="cam.asp?cam=1500">Burleigh Heads</a><br><a href="cam.asp?cam=1600">Currumbin</a><br><a href="cam.asp?cam=1800">Greenmount</a><br><a href="cam.asp?cam=1900">Snapper</a><br><a href="cam.asp?cam=1950">Snapper Broadband</a><br><a href="cam.asp?cam=2000">Duranbah</a><br><a href="cam.asp?cam=2010">Dbah Broadband</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=2200">Byron Bay</a><br><a href="cam.asp?cam=2700">Port Macquire</a><br><a href="cam.asp?cam=2800">Newcastle Beach</a><br><a href="cam.asp?cam=3150">Shelly beach </a><br><a href="cam.asp?cam=3200">Palm Beach</a><br><a href="cam.asp?cam=3400">Nth Narrabeen</a><br><a href="cam.asp?cam=3450">Nth Narrabeen Broadband</a><br><a href="cam.asp?cam=3475">DeeWhy (now live)</a><br><a href="cam.asp?cam=3480">DeeWhy Broadband (live)</a><br><a href="cam.asp?cam=3500">Manly</a><br><a href="cam.asp?cam=3550">Manly Broadband (wm)</a><br><a href="cam.asp?cam=3700">Sydney Harbour</a><br><a href="cam.asp?cam=3800">Bondi</a><br><a href="cam.asp?cam=3900">Maroubra</a><br><a href="cam.asp?cam=4100">Cronulla</a><br><a href="cam.asp?cam=4200">Wollongong</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=4600">Woolamai</a><br><a href="cam.asp?cam=5300">Portsea</a><br><a href="cam.asp?cam=5350">Portsea Broadband</a><br><a href="cam.asp?cam=5550">Melbourne City</a><br><a href="cam.asp?cam=5600">St Kilda</a><br><a href="cam.asp?cam=5800">Jan Juc - Winki</a><br><a href="cam.asp?cam=5850">Jan Juc Broadband</a><br><a href="cam.asp?cam=6000">Fairhaven</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=6450">Middleton</a><br><a href="cam.asp?cam=6500">Chiton Rocks (live)</a><br><a href="cam.asp?cam=6800">Seaford (live)</a><br><a href="cam.asp?cam=6850">Seaford Broadband</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=7025">Cables</a><br><a href="cam.asp?cam=7030">Cottesloe</a><br><a href="cam.asp?cam=7035">Swanbourne</a><br><a href="cam.asp?cam=7040">Triggs Point WA</a><br><a href="cam.asp?cam=7050">Triggs Beach WA</a><br><a href="cam.asp?cam=7100">Lancelin</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=7800">Clifton</a><br><a href="cam.asp?cam=7900">Eaglehawk Neck</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=9010">Tairua</a><br><a href="cam.asp?cam=9036">Pauanui South</a><br><a href="cam.asp?cam=9040">New Plymouth</a><br><a href="cam.asp?cam=9050">Gisborne</a><br><a href="cam.asp?cam=9075">New Brighton Pier</a><br><a href="cam.asp?cam=9080">Ashburton A</a><br> <img src="gfx/line-blue.gif" width="110" height="4" vspace="4"><br>
+<td class="lists"><a href="cam.asp"><img src="gfx/photos/coast.gif" width="110" height="39" border="0" vspace="3"></a><br> <b>Most Popular</b><br><a href="cam.asp?cam=500">Noosa</a><br><a href="cam.asp?cam=600">Sunshine Beach</a><br><a href="cam.asp?cam=750">Alex Headland</a><br><a href="cam.asp?cam=900">Kings</a><br><a href="cam.asp?cam=1200">Artificial Reef</a><br><a href="cam.asp?cam=1300">Surfers Paradise</a><br><a href="cam.asp?cam=1350">Northcliffe</a><br><a href="cam.asp?cam=1500">Burleigh Heads</a><br><a href="cam.asp?cam=1600">Currumbin</a><br><a href="cam.asp?cam=1700">Kirra</a><br><a href="cam.asp?cam=1800">Greenmount</a><br><a href="cam.asp?cam=1900">Snapper</a><br><a href="cam.asp?cam=2000">Duranbah</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=2200">Byron Bay</a><br><a href="cam.asp?cam=2700">Port Macquire</a><br><a href="cam.asp?cam=2800">Newcastle Beach</a><br><a href="cam.asp?cam=3150">Shelly beach </a><br><a href="cam.asp?cam=3200">Palm Beach</a><br><a href="cam.asp?cam=3400">Nth Narrabeen</a><br><a href="cam.asp?cam=3475">DeeWhy</a><br><a href="cam.asp?cam=3500">Manly</a><br><a href="cam.asp?cam=3700">Sydney Harbour</a><br><a href="cam.asp?cam=3800">Bondi</a><br><a href="cam.asp?cam=3900">Maroubra</a><br><a href="cam.asp?cam=4100">Cronulla</a><br><a href="cam.asp?cam=4200">Wollongong</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=4600">Woolamai</a><br><a href="cam.asp?cam=5300">Portsea</a><br><a href="cam.asp?cam=5550">Melbourne City</a><br><a href="cam.asp?cam=5600">St Kilda</a><br><a href="cam.asp?cam=5800">Jan Juc - Winki</a><br><a href="cam.asp?cam=6000">Fairhaven</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=6500">Chiton Rocks (live)</a><br><a href="cam.asp?cam=6800">Seaford (live)</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=7030">Cottesloe</a><br><a href="cam.asp?cam=7035">Swanbourne</a><br><a href="cam.asp?cam=7040">Triggs Point WA</a><br><a href="cam.asp?cam=7050">Triggs Beach WA</a><br><a href="cam.asp?cam=7100">Lancelin</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=7800">Clifton</a><br><a href="cam.asp?cam=7900">Eaglehawk Neck</a><br><img src="gfx/spacer.gif" height="6"><br><a href="cam.asp?cam=9010">Tairua</a><br><a href="cam.asp?cam=9036">Pauanui South</a><br><a href="cam.asp?cam=9040">New Plymouth</a><br><a href="cam.asp?cam=9050">Gisborne</a><br><a href="cam.asp?cam=9075">New Brighton Pier</a><br><a href="cam.asp?cam=9080">Ashburton A</a><br> <img src="gfx/line-blue.gif" width="110" height="4" vspace="4"><br>
 <a href="map.asp"><img src="gfx/photos/globe.gif" width="60" height="60" border="0" vspace="3" align="left" hspace="4"></a><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><br>
 More on our <a href="map.asp">maps</a>. </font></td>
 	</tr>
@@ -185,37 +179,6 @@ More on our <a href="map.asp">maps</a>. </font></td>
 </tbody></table>
 </center>
 
-
-
-<script language="JavaScript"> 
-<!-- 
-	 var AMMeasureAvailable = false; 
-//-->
-</script>
-
-<script src="http://ad.mel.traffion.com/am.js" language="JavaScript">
-
-</script>
-<script language="JavaScript"><!--
-
-var ClientID=451090;
-var DomainID=489065;
-var SectionName	= "Privacy";
-var ServerName	= "";
-var PageName	= "";
-var IncludeQuery	= true;
-
-
-if (AMMeasureAvailable) { 
-	AMMeasure(ClientID, DomainID, SectionName, ServerName, PageName, IncludeQuery);
-	}
-
-
-//--> 
-</script>
-<noscript>
-	<IMG SRC="http://ad.mel.traffion.com/ad/page?mid=451090&did=489065&section=Privacy" height="1" width="1">
-</noscript>
 <!-- START RedMeasure V4 - Java v1.1  Revision: 1.8 -->
 <!-- COPYRIGHT 2000 Red Sheriff Limited -->
 
