--- a/f/fr/fre/freedesktopwallpapers.net.html
+++ b/f/fr/fre/freedesktopwallpapers.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freedesktopwallpapers.net privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610131611id_/http%3A//freedesktopwallpapers.net/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freedesktopwallpapers.net privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208013145id_/http%3A//www.freedesktopwallpapers.net/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy</title>
 <style type="text/css">
