--- a/b/ba/bat/batterymart.com.html
+++ b/b/ba/bat/batterymart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the batterymart.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603024554id_/http%3A//www.batterymart.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the batterymart.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208013433id_/http%3A//www.batterymart.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Battery Mart</title>
@@ -10,23 +10,24 @@
 <meta name="revisit-after" content="14 days">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="StyleSheet" href="css/bmart.css" type="text/css">
-<script>
+<script language="JavaScript" type="text/JavaScript">
 <!--
 function sf(){document.BrockSearch.Search_Search.focus();}
 //-->
-</script></head>
+</script><script language="JavaScript" src="http://www.trustlogo.com/trustlogo/javascript/trustlogo.js" type="text/javascript"></script></head>
 
 
-<body bgcolor="white" text="black" vlink="red" link="blue" topmargin="0" leftmargin="0" rightmargin="0" marginheight="0" bottommargin="0" marginwidth="0" onload="sf()">
+
+<body bgcolor="white" text="black" vlink="red" link="blue" topmargin="0" leftmargin="0" rightmargin="0" marginwidth="0" marginheight="0" onload="sf()">
 
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td>
 <!-- Begin Top Page Table -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<table border="0" cellpadding="0" cellspacing="0" width="100%" background="images/logos/snowflakes-bg.gif">
 	<tbody><tr>
 		<td align="left"><a href="http://www.batterymart.com"><img src="images/logos/bmart_logo_dot.jpg" alt="Battery Mart" border="0"></a></td>
-		<td align="right" valign="bottom"><a href="http://www.batterymart.com/battery.mv?Screen=BASK"><img src="images/buttons/shopping_cart.gif" alt="" border="0"></a><a href="https://www.batterymart.com/battery.mv?Screen=SACNT"><img src="images/buttons/your_account.gif" alt="" border="0"></a><a href="http://www.batterymart.com/help.php"><img src="images/buttons/help.gif" alt="" border="0"></a><p>
+		<td align="right" valign="bottom"><a href="http://www.batterymart.com/battery.mv?screen=bask"><img src="images/buttons/shopping_cart.gif" alt="" border="0"></a><a href="https://www.batterymart.com/battery.mv?screen=sacnt"><img src="images/buttons/your_account.gif" alt="" border="0"></a><a href="http://www.batterymart.com/help.php"><img src="images/buttons/help.gif" alt="" border="0"></a><p>
 			<table border="0" cellpadding="0" cellspacing="0">
 				<tbody><tr>
 					<td align="right"><a href="http://www.batterymart.com"><img src="images/buttons/home-top.gif" alt="" border="0"></a><a href="http://www.batterymart.com/contact_us.php"><img src="images/buttons/contactus-top.gif" alt="" border="0"></a><a href="http://www.batterymart.com/tracking.php"><img src="images/buttons/order_tracking_tab.gif" alt="" border="0"></a><a href="http://www.batterymart.com/battery.mv?c=clearance"><img src="images/buttons/clearance_tab.gif" alt="" border="0"></a><a href="http://www.batterymart.com/b2b.php"><img src="images/buttons/corpgov_tab.gif" alt="" border="0"></a></td>
@@ -63,19 +64,20 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 		<input type="text" name="Search_Search" size="15" value="">
 		</td>
 		<td align="left" valign="middle">&nbsp;
-			<input type="image" value="Search" size="" src="images/buttons/go.gif" border="0">
+			<input type="image" value="Search" size="" src="images/buttons/go.gif">
 		</td>
 	
 		<td align="right" valign="middle"><font face="arial" size="2" color="white"><b>The Battery Experts</b></font></td>
 	</tr>
 </tbody></table>
+<!-- End 2nd Top Page Table -->
 </td>
 <td bgcolor="#000099" align="right" valign="middle"><font face="arial" size="2" color="white"><b>Call us toll-free at&nbsp; 1- 800- 405- 2121&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></font>
 </td>
 
 </tr>
 </tbody></table>
-<!-- End 2nd Top Page Table -->
+<!-- End Top Page Table -->
 <!-- Begin Main Page Table -->
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tbody><tr>
@@ -123,7 +125,6 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 					</td>
 				</tr>
 				<tr>
-				</tr><tr>
 					<td align="left" valign="top"><img src="images/arrow-yellow.gif" width="18" height="8" alt="" border="0"><a class="Menu" href="http://www.batterymart.com/battery.mv?c=portable_dvd_player_batteries">DVD Player</a>
 					</td>
 				</tr>
@@ -219,6 +220,10 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 					</td>
 				</tr>
 				<tr>
+					<td align="left" valign="top"><img src="images/arrow-yellow.gif" width="18" height="8" alt="" border="0"><a class="Menu" href="http://www.batterymart.com/battery.mv?c=battery_boxes">Boxes</a>
+					</td>
+				</tr>
+				<tr>
 					<td align="left" valign="top"><img src="images/arrow-yellow.gif" width="18" height="8" alt="" border="0"><a class="Menu" href="http://www.batterymart.com/battery.mv?c=deltranchargers">Deltran Chargers</a>
 					</td>
 				</tr>
@@ -228,6 +233,10 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 				</tr>
 				<tr>
 					<td align="left" valign="top"><img src="images/arrow-yellow.gif" width="18" height="8" alt="" border="0"><a class="Menu" href="http://www.batterymart.com/battery.mv?c=flashlights">Flashlights</a>
+					</td>
+				</tr>
+				<tr>
+					<td align="left" valign="top"><img src="images/arrow-yellow.gif" width="18" height="8" alt="" border="0"><a class="Menu" href="http://www.batterymart.com/battery.mv?c=jump_starters">Jump Starters</a>
 					</td>
 				</tr>
 				<tr>
@@ -275,7 +284,10 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 	<td align="left"><font face="arial" size="2"><b><u>Order Forms</u></b><br>Our site uses an order form for customers to request information, products, and services. We collect contact information (like their email address), and financial information (like their account or credit card numbers).<br><br>Contact information from the order forms is used to ship purchases. The customer's contact information is also used to get in touch with the visitor when necessary.  Financial information that is collected is used to bill the user for products and services.</font><p><font face="arial" size="2">Furthermore, you can be assured that the information you give us is private. We do not sell, rent or share information about our customers.</font></p></td>
 </tr>
 <tr>
-	<td align="left"><font face="arial" size="2"><b><u>Security</u></b><br>This site has security measures in place to protect the loss, misuse, and alteration of the information under our control. All credit card transactions are conducted on a secure server enabled with a secure certificate from GeoTrust (formerly Equifax).  Credit card data is only used during a transaction and is not stored on our servers.</font></td>
+	<td align="left"><font face="arial" size="2"><b><u>Email Updates</u></b><br>You can always opt-out of email updates at BatteryMart.com.  You may also unsubscribe to these e-mails at any time using the unsubscribe link at the base of any BatteryMart.com e-mail.  Your email address will never be sold to a third party.</font></td>
+</tr>
+<tr>
+	<td align="left"><font face="arial" size="2"><b><u>Security</u></b><br>This site has security measures in place to protect the loss, misuse, and alteration of the information under our control. All credit card transactions are conducted on a secure server enabled with a secure certificate.  Credit card data is only used during a transaction and is not stored on our servers.</font></td>
 </tr>
 <tr>
 	<td align="left"><font face="arial" size="2"><b><u>Contacting Us</u></b><br>If you have any questions about this privacy statement, the practices of this site, or ordering with this Web site, you can contact: <a href="mailto:support@batterymart.com">support@batterymart.com</a></font></td>
@@ -304,9 +316,16 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 <tr>
 	<td bgcolor="#000099" align="left" valign="top"><img src="images/dotclear.gif" width="143" height="1" alt="" border="0"></td>
   <td align="left" valign="top"><p></p></td>
-	<td><img src="images/logos/credit_cards.gif"><img src="images/dotclear.gif" width="20" height="100" alt="" border="0">
+	<td><img src="images/logos/credit_cards.gif" alt=""><img src="images/dotclear.gif" width="20" height="100" alt="" border="0">
 	    <a href="http://www.bbbonline.org/cks.asp?id=1040204827038607" target="_blank"><img src="images/logos/bbbseal.gif" alt="" border="0"></a><img src="images/dotclear.gif" width="20" height="100" alt="" border="0">
 		<a href="http://www.bizrate.com/ratings_guide/cust_reviews__mid--65465.html" target="_blank"><img src="http://medals.bizrate.com/medals/dynamic/65465_medal.gif" alt="" border="0"></a><img src="images/dotclear.gif" width="20" height="100" alt="" border="0">
+		<!--
+TrustLogo Html Builder Code:
+Shows the logo at URL http://www.batterymart.com/images/logos/comodo_ssl.gif
+Logo type is Secure Site Seal - For SSL Certificate holders ("SC")
+Not Floating
+//-->
+<script type="text/javascript">TrustLogo("images/logos/comodo_ssl.gif", "SC", "none");</script>
 	</td>
 </tr>
 <tr>
@@ -317,7 +336,7 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 <tr>
 	<td bgcolor="#000099" align="left" valign="top" width="143"><img src="images/dotclear.gif" width="143" height="1" alt="" border="0"></td>
 	<td align="left" valign="top"></td>
-	<td><center><font size="2" face="arial"><a href="http://www.batterymart.com">Home</a> | <a href="http://www.batterymart.com/contact_us.php">Contact Us</a> | <a href="http://www.batterymart.com/battery_faq.php">FAQ</a> | <a href="http://www.batterymart.com/privacy.php">Privacy Policy</a> | <a href="http://www.batterymart.com/shipping.php">Shipping</a><br> <a href="https://www.batterymart.com/battery.mv?Screen=AFCL">Affiliate Program</a> | <a href="http://www.batterymart.com/links.php">Links</a> | <a href="http://www.batterymart.com/b2b.php">Corporate/Govt Buying</a></font></center></td>
+	<td><center><font size="2" face="arial"><a href="http://www.batterymart.com">Home</a> | <a href="http://www.batterymart.com/contact_us.php">Contact Us</a> | <a href="http://www.batterymart.com/battery_faq.php">FAQ</a> | <a href="http://www.batterymart.com/privacy.php">Privacy Policy</a> | <a href="http://www.batterymart.com/shipping.php">Shipping</a><br> <a href="https://www.batterymart.com/battery.mv?screen=afcl">Affiliate Program</a> | <a href="http://www.batterymart.com/links.php">Links</a> | <a href="http://www.batterymart.com/b2b.php">Corporate/Govt Buying</a></font></center></td>
 </tr>
 <tr>
 	<td bgcolor="#000099" align="left" valign="top" width="143"><img src="images/dotclear.gif" width="143" height="1" alt="" border="0"></td>
@@ -325,7 +344,7 @@ function sf(){document.BrockSearch.Search_Search.focus();}
 	<td><br><center><font size="2" face="arial"><b>Order Toll Free/Questions? 1-800-405-2121</b></font></center></td>
 </tr>
 <tr>
-	<td bgcolor="#000099" align="left" valign="top" width="143"><img src="images/dotclear.gif" width="143" height="1" alt="" border="0"></td>
+	<td bgcolor="#000099" align="left" valign="top" width="143"><img src="images/dotclear.gif" width="143" height="1" border="0" alt=""></td>
 	<td align="left" valign="top"><img src="images/corner_bottom_left.gif" width="30" height="31" alt="" border="0"></td>
 	<td><center><a href="http://www.batterymart.com/copyright.php">Copyright</a> © 1999-2004 <a href="http://www.batterymart.com/battery/"><font color="#000000">Battery Mart</font></a>. All Rights Reserved.</center></td>
 </tr>
